# Simple-Micro-Service

./: .gitignore  .swp  README.md
Auth-Service/: .dockerignore  entrypoint.sh  main.py  pyproject.toml  verify.py
Auth-Service/auth_service/api/: urls.py  views.py
Auth-Service/auth_service/auth_manager/: auth.py  exceptions.py  serializers.py  types.py  urls.py  views.py
Auth-Service/auth_service/auth_manager/auth/: __init__.py  authentication.py  backends.py  exceptions.py  middleware.py  mixins.py  permissions.py  serializers.py  utils.py
Auth-Service/auth_service/auth_manager/crypto/: key_manager.py
Auth-Service/auth_service/auth_manager/managers.py/: token_manager.py
Auth-Service/auth_service/auth_service/: settings.py  urls.py
Auth-Service/auth_service/config/: Dockerfile  main.env  main.env.example
Auth-Service/auth_service/keys/: private.pem  public.pem
Auth-Service/auth_service/users/: admin.py  models.py  urls.py  views.py
Auth-Service/auth_service/users/migrations/: 0001_initial.py
Auth-Service/auth_service/utils/: helper.py  validation.py
Bank-Service/: .dockerignore  main.py  pyproject.toml  test.py  ts.py
Bank-Service/bank_service/: manage.py
Bank-Service/bank_service/api/: views.py
Bank-Service/bank_service/bank_service/: asgi.py  settings.py  urls.py  wsgi.py
Bank-Service/bank_service/config/: Dockerfile  main.env  main.env.example
Bank-Service/bank_service/core/: admin.py  apps.py  claude.py  models.py  signals.py
Bank-Service/bank_service/users/: admin.py  apps.py  models.py  signals.py
Bank-Service/bank_service/users/auth/: decorators.py
Bank-Service/bank_service/utils/: helper.py
Micro-Manager/: main.py  pyproject.toml  verify.py
Micro-Manager/micro_service/: manage.py
Micro-Manager/micro_service/config/: Dockerfile  main.env.example
Micro-Manager/micro_service/micro_manager/: __init__.py  admin.py  apps.py  models.py  serializers.py  tokens.py  urls.py  views.py
Micro-Manager/micro_service/micro_manager/migrations/: 0001_initial.py
Micro-Manager/micro_service/micro_service/: asgi.py  settings.py  urls.py  wsgi.py
Payment-Service/: .dockerignore
config/: .env  .env.example  docker-compose.yaml
config/nginx/: .dockerignore  Dockerfile  nginx.conf
